--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
+		"moment": "^2.30.1",
 		"sqlite3": "^5.1.7"
 	},
 	"repository": {
